--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -1,43 +1,75 @@
 /* homepage.css */
 .homepage-container {
-    display: flex;
-    height: 100vh;
-    background-color: #333; /* cor de fundo similar à que você mostrou */
-  }
-  
-  .sidebar {
-    width: 100px; /* Largura da barra lateral */
-    background-color: #1c1c1c; /* cor da barra lateral */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .logo {
-    width: 60px;
-    height: 60px;
-  }
-  
-  .main-content {
-    flex-grow: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .courses-container {
-    display: flex;
-    gap: 20px; /* Espaçamento entre os blocos */
-  }
-  
-  .curso {
-    width: 200px;
-    height: 200px;
-    background-color: #666; /* Cor de fundo dos blocos */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #000; /* Cor do texto */
-    font-size: 20px;
-    font-weight: bold;
-  }
+  display: flex;
+  height: 100vh;
+  background-color: #333;
+}
+
+.sidebar {
+  width: 100px;
+  background-color: #1c1c1c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  width: 60px;
+  height: 60px;
+}
+
+.main-content {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start; /* Alinha os cards ao topo */
+}
+
+.courses-container {
+  display: flex;
+  gap: 20px;
+  margin-top: 20px; /* Ajusta o espaçamento no topo */
+}
+
+.curso {
+  width: 200px; /* Diminuímos o tamanho dos cards */
+  height: 200px; /* Tamanho menor */
+  background-color: #202020; /* Tom de cinza mais escuro */
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #ddd;
+  font-size: 14px;
+  text-align: center;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.curso:hover {
+  transform: scale(1.05);
+  background-color: #555; /* Cor mais escura ao passar o mouse */
+}
+
+.curso-image {
+  width: 150px;
+  height: 100px;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.curso-info p {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.curso-info span {
+  font-size: 12px;
+}
+
+.curso:hover .curso-image {
+  transform: scale(1.1);
+}
