--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,34 +1,64 @@
 /* Navbar.css */
 .navbar {
-    background-color: #1c1c1c;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .navbar-logo {
-    width: 80px; /* Tamanho da imagem no header */
-  }
-  
-  .nav-links {
-    display: flex;
-    gap: 30px;
-  }
-  
-  .nav-links a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px; /* Aumenta o tamanho da fonte */
-    transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-  }
-  
-  .nav-links a:hover {
-    color: #5a5a5a; /* Efeito de cor dourada ao passar o mouse */
-    transform: scale(1.1); /* Efeito de aumento */
-  }
-  
-  .nav-links a:active {
-    transform: scale(1.05); /* Efeito de clique */
-  }
-  
+  background-color: #1c1c1c;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Mantém a logo à esquerda e o resto distribuído */
+}
+
+.navbar-logo {
+  width: 125px; /* Tamanho da imagem no header */
+  margin-right: auto; /* Mantém a logo no canto esquerdo */
+}
+
+.nav-links-container {
+  flex-grow: 1; /* Faz com que o container dos links ocupe o máximo de espaço possível */
+  display: flex;
+  justify-content: center; /* Centraliza os links dentro desse container */
+}
+
+.nav-links {
+  display: flex;
+  gap: 35px;
+  align-items: center;
+}
+
+.nav-links a {
+  color: #91918f;
+  text-decoration: none;
+  font-size: 35px; /* Aumenta o tamanho da fonte */
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.nav-links a:hover {
+  color: #5a5a5a; /* Efeito de cor ao passar o mouse */
+  transform: scale(1.1); /* Efeito de aumento */
+}
+
+.nav-links a:active {
+  transform: scale(1.05); /* Efeito de clique */
+}
+
+.nav-links li {
+  list-style: none; /* Remove a bolinha padrão */
+  position: relative; /* Para posicionar o pseudo-elemento */
+  padding-left: 20px; /* Espaço para a bolinha customizada */
+}
+
+.nav-links li::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 10px; /* Aumente o tamanho da bolinha */
+  height: 10px; /* Aumente o tamanho da bolinha */
+  background-color: #91918f; /* Cor da bolinha */
+  border-radius: 50%; /* Faz a bolinha ser redonda */
+}
+
+.nav-links li:hover {
+  color: #5a5a5a; /* Efeito de cor ao passar o mouse */
+  transform: scale(1.1); /* Efeito de aumento */
+}
