--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,14 @@
 .read-the-docs {
   color: #888;
 }
+
+/* App.css */
+
+.app-container {
+  display: flex;
+}
+
+.content-container {
+  flex-grow: 1;
+  margin-left: 100px; /* Espaço reservado para a sidebar */
+}
